--- a/project.html
+++ b/project.html
@@ -8,22 +8,26 @@
 </head>
 <body>
     <header>
-        <a href="#"><img src="" alt="">DLC</a>
-       
+        <a href="#"><img src="./img/icon/DLC.svg" alt="dlc"></a>
+       <u>
         <li><a href="#">Blog</a></li>
         <li><a href="#">Catalog</a></li>
         <li><a href="#">About Us</a></li>
         <li><a href="#"></a>🔍</li>
         <li><a href="#">Contact Us</a></li>
+    </u>
     </header>
     <main>
 <section>
-    <p>01</p>
-    <p>—</p>
-    <p>—</p>
-    <p>—</p>
-    <p>—</p>
+    <ul>
+    <li><p>01</p></li>
+    <li><p>—</p></li>
+    <li><p>—</p></li>
+    <li><p>—</p></li>
+    <li><p>—</p></li>
+</ul>
     <h1> THE OOH NOO COLLECTION</h1>
+    <img src="./img/monster.png" alt="monster" width="635" height="461" >
 
     <p><i>Designed in Slovenia</i></p>
     <button type="button">EXPLORE NOW</button> 
@@ -31,14 +35,14 @@
 </section>
 <section>
     <h2>Category Products</h2>
-<ul><a href="#"><img src="" alt="">APPAREL KIDS</a></ul>
-<ul><a href="#"><img src="" alt="">HOLIDAY SHOP</a></ul>
- <ul><a href="#"><img src="" alt="">TOYS</a></ul>
- <ul><a href="#"><img src="" alt="">ACCESSORIES</a></ul>
+<ul><a href="#"><img src="./img/sweater.jpg" alt="sweater" width="244" height="177">APPAREL KIDS</a></ul>
+<ul><a href="#"><img src="./img/sock.jpg" alt="sock" width="208" height="244">HOLIDAY SHOP</a></ul>
+ <ul><a href="#"><img src="./img/deer.jpg" alt="deer" width="270" height="270" >TOYS</a></ul>
+ <ul><a href="#"><img src="./img/accessories.jpg" alt="accessories" width="240" height="250">ACCESSORIES</a></ul>
     <button type="button">←</button> <button type="button">→</button> <p>Modern finds for the modern home. Curated goods by unique designers around the world from fashion to furniture for kids and adults.</p>
 </section>
 <section>
-    <img src="" alt="">
+    <img src="./img/dress.jpg" alt="dress" width="480" height="560">
     <h2>DELIVERY</h2>
     <i><b><p>Delivery</p></b>
     <p>Guarantee</p>
@@ -49,10 +53,10 @@
     <button type="button">Learn more</button>
 </section>
 <section>
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
+    <a href="#"><img src="./img/mail.jpg" alt="mail" width="193" height="60"></a>
+    <a href="#"><img src="./img/apple.jpg" alt="apple" width="179" height="61"></a>
+    <a href="#"><img src="./img/eltex.jpg" alt="eltex" width="216" height="46"></a>
+    <a href="#"><img src="./img/owox.jpg" alt="owox" width="211" height="40"></a>
 </section>
 <section>
     <img src="#" alt="">
@@ -73,30 +77,34 @@
     <footer>
         <section>
             <p>Navigation</p>
+            <ul>
             <li><a href="#">About Us</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Design Services</a></li>
             <li><a href="#">Featured On</a></li>
             <li><a href="#">2018 Holiday Catalog</a></li>
             <li><a href="#">Shop By Designer</a></li>
+        </ul>
         </section>
         <section>
             <p>Customer Information</p>
+            <ul>
             <li><a href="#">Contact Us</a></li>
             <li><a href="#">Sale Exclusions</a></li>
             <li><a href="#">Shipping & Returns</a></li>
             <li><a href="#">Terms & Conditions</a></li>
             <li><a href="#">Privacy Policy</a></li>
             <li><a href="#">Search</a></li>
+        </ul>
         </section>
         <section>
             <p>Connect</p>
             <input type="text">
             <br>
-            <a href=""><img src="" alt="">Facebook</a>
-            <a href=""><img src="" alt="">Twitter</a>
-            <a href=""><img src="" alt="">Pinterest</a>
-            <a href=""><img src="" alt="">Instagram</a>
+            <a href="#"><img src="./img/icon/facebook.svg" alt="facebook"></a>
+            <a href="#"><img src="./img/icon/twitter.svg" alt="twitter"></a>
+            <a href="#"><img src="./img/icon/pinterest.svg" alt="pinterest"></a>
+            <a href="#"><img src="./img/icon/instagram.svg" alt="instagram"></a>
 
         </section>
         <section>
