все что смогла сделать
проблемы:
1. не получается дать два класса одновременно. программа видит только первый
2. не получается убрать подчеркивание у ссылок в header с помощью text-decoration: none; во всех остальных частях сайта ссылки убираются
3. не получается в футере покрасить ссылки в белый цвет.
4. не получилось сделать фон вокруг картинок

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="stylesheet" href="css/common.css">
+<link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,400;1,700&family=Montserrat:ital,wght@0,400;0,700;1,400&family=Open+Sans:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
+    <title>Main</title>
 </head>
 <body>
-    <header>
+    <header class="container">
         <a href="#"><img src="./img/icon/DLC.svg" alt="dlc"></a>
        <u>
         <li><a href="#">Blog</a></li>
@@ -18,7 +22,7 @@
     </u>
     </header>
     <main>
-<section>
+<section class="container">
     <ul>
     <li><p>01</p></li>
     <li><p>—</p></li>
@@ -30,51 +34,51 @@
     <img src="./img/monster.png" alt="monster" width="635" height="461" >
 
     <p><i>Designed in Slovenia</i></p>
-    <button type="button">EXPLORE NOW</button> 
+    <button class="blackbutton" type="button">EXPLORE NOW</button> 
     <p>Free (continental) USA shipping on all orders of $100 USD or more!</p>   
 </section>
-<section>
+<section class="container">
     <h2>Category Products</h2>
-<ul><a href="#"><img src="./img/sweater.jpg" alt="sweater" width="244" height="177">APPAREL KIDS</a></ul>
+<ul><a href="#"><img class="sweater" src="./img/sweater.jpg" alt="sweater" width="244" height="177">APPAREL KIDS</a></ul>
 <ul><a href="#"><img src="./img/sock.jpg" alt="sock" width="208" height="244">HOLIDAY SHOP</a></ul>
  <ul><a href="#"><img src="./img/deer.jpg" alt="deer" width="270" height="270" >TOYS</a></ul>
  <ul><a href="#"><img src="./img/accessories.jpg" alt="accessories" width="240" height="250">ACCESSORIES</a></ul>
     <button type="button">←</button> <button type="button">→</button> <p>Modern finds for the modern home. Curated goods by unique designers around the world from fashion to furniture for kids and adults.</p>
 </section>
-<section>
+<section class="container">
     <img src="./img/dress.jpg" alt="dress" width="480" height="560">
     <h2>DELIVERY</h2>
-    <i><b><p>Delivery</p></b>
-    <p>Guarantee</p>
-    <p>Credit</p></i>
+    <b><p class="delivery" >Delivery</p>
+    <p class="guarantee" >Guarantee</p>
+    <p class="guarantee" >Credit</p>
     <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
     
     <p>What started as an outlet to deal  with the traumatic loss of my husband, dlk has now become a truly happy place for me and i have you and all of the beautiful designers that we work with to thank!</p>
-    <button type="button">Learn more</button>
+    <button class="blackbutton" type="button">Learn more</button>
 </section>
-<section>
+<section class="container">
     <a href="#"><img src="./img/mail.jpg" alt="mail" width="193" height="60"></a>
     <a href="#"><img src="./img/apple.jpg" alt="apple" width="179" height="61"></a>
     <a href="#"><img src="./img/eltex.jpg" alt="eltex" width="216" height="46"></a>
     <a href="#"><img src="./img/owox.jpg" alt="owox" width="211" height="40"></a>
 </section>
-<section>
+<section class="container">
     <img src="#" alt="">
     <img src="#" alt="">
     <img src="#" alt="">
     <img src="#" alt=""></section>
-    <section>
+    <section class="container">
         <h2>Design Life Kids</h2>
-<p><i>About Us</i></p>
+<p class="guarantee">About Us</p>
 <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
-<button type="button" >buy now</button>
+<button class="blackbutton" type="button" >buy now</button>
     <h2>Contacts</h2>
     <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p> 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9490.1485980241!2d49.2903386!3d53.5124631!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb18d94ffcf91e387!2zREwgQWNhZGVteSDigJQg0LrRg9GA0YHRiyDQv9GA0L7Qs9GA0LDQvNC80LjRgNC-0LLQsNC90LjRjw!5e0!3m2!1sru!2sru!4v1669041543836!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9490.1485980241!2d49.2903386!3d53.5124631!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb18d94ffcf91e387!2zREwgQWNhZGVteSDigJQg0LrRg9GA0YHRiyDQv9GA0L7Qs9GA0LDQvNC80LjRgNC-0LLQsNC90LjRjw!5e0!3m2!1sru!2sru!4v1669041543836!5m2!1sru!2sru" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
 </section>
 
     </main>
-    <footer>
+    <footer class="container">
         <section>
             <p>Navigation</p>
             <ul>
