--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" href="css/common.css">
+<link rel="stylesheet" href="css/style__index.css">
 <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,400;1,700&family=Montserrat:ital,wght@0,400;0,700;1,400&family=Open+Sans:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
     <title>Main</title>
 </head>
@@ -27,65 +28,80 @@
     </header>
     <main>
 <section class="container">
+    <div class="banner">
     <ul>
-    <li><p>01</p></li>
-    <li><p>—</p></li>
-    <li><p>—</p></li>
-    <li><p>—</p></li>
-    <li><p>—</p></li>
+    <li><a href="#"> <img class="number" src="./img/01.png" alt="01"></a></li>
+    <li><a href="#"> <img class="rectangle" src="./img/Rectangle (active).png" alt="-"></a></li>
+    <li><a href="#"> <img class="rectangle" src="./img/Rectangle.png" alt="-"></a></li>
+    <li><a href="#"> <img class="rectangle" src="./img/Rectangle.png" alt="-"></a></li>
+    <li><a href="#"> <img class="rectangle" src="./img/Rectangle.png" alt="-"></a></li>
 </ul>
-    <h1> THE OOH NOO COLLECTION</h1>
-    <img src="./img/monster.png" alt="monster" width="635" height="461" >
-
-    <p><i>Designed in Slovenia</i></p>
+    <h1 class="title"> THE OOH NOO COLLECTION</h1>
+    <img class="monster" src="./img/monster.png" alt="monster" width="635" height="461" >
+    <div class="message">
+    <p class="design">Designed in Slovenia</p>
     <button class="blackbutton" type="button">EXPLORE NOW</button> 
-    <p>Free (continental) USA shipping on all orders of $100 USD or more!</p>   
+</div>
+<section class="shipping" >
+    <p>Free (continental) USA shipping on all orders of $100 USD or more!</p> 
+</section>
+
+</div> 
 </section>
 <section class="container">
-    <h2>Category Products</h2>
-<ul><a href="#"><img class="sweater" src="./img/sweater.jpg" alt="sweater" width="244" height="177">APPAREL KIDS</a></ul>
-<ul><a href="#"><img src="./img/sock.jpg" alt="sock" width="208" height="244">HOLIDAY SHOP</a></ul>
- <ul><a href="#"><img src="./img/deer.jpg" alt="deer" width="270" height="270" >TOYS</a></ul>
- <ul><a href="#"><img src="./img/accessories.jpg" alt="accessories" width="240" height="250">ACCESSORIES</a></ul>
-    <button type="button">←</button> <button type="button">→</button> <p>Modern finds for the modern home. Curated goods by unique designers around the world from fashion to furniture for kids and adults.</p>
-</section>
-<section class="container">
+    <h2 class="products__title" >Category Products</h2>
+    <div class="products">
+    <ul><a href="#"><img src="./img/sweater.jpg" alt="APPAREL KIDS" width="280" height="270"></a></ul>
+    <ul><a href="#"><img src="./img/sock.jpg" alt="HOLIDAY SHOP" width="280" height="270"></a></ul>
+    <ul><a href="#"><img src="./img/deer.jpg" alt="TOYS" width="270" height="270" ></a></ul>
+    <ul><a href="#"><img src="./img/man.jpg" alt="ACCESSORIES" width="280" height="270"></a></ul>
+    </div>
+    <div class="buttons">
+    <button type="button"> <img src="./img/button-left.jpg" alt="button-left" width="37" height="37"> </button> <button type="button"><img src="./img/button-right.jpg" alt="button-right" width="37" height="37"></button> 
+    <p class="button__title">Modern finds for the modern home. Curated goods by unique designers <br> around the world from fashion to furniture for kids and adults.</p>
+    </div>
+    </section>
+    <section class="container delivery__list">
     <img src="./img/dress.jpg" alt="dress" width="480" height="560">
-    <h2>DELIVERY</h2>
-    <b><p class="delivery" >Delivery</p>
-    <p class="guarantee" >Guarantee</p>
-    <p class="guarantee" >Credit</p>
-    <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
+    <h2 class="delivery__title">DELIVERY</h2>
+    <div class="delivery__elements">
+    <p class="delivery delivery__item" ><a href="#">Delivery </a></p>
+    <p class="delivery__item" ><a href="#">Guarantee</a></p>
+    <p class="delivery__item" ><a href="#">Credit</a></p>
+    <p class="delivery__description">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
     
-    <p>What started as an outlet to deal  with the traumatic loss of my husband, dlk has now become a truly happy place for me and i have you and all of the beautiful designers that we work with to thank!</p>
+    <p class="delivery__description-2">What started as an outlet to deal  with the traumatic loss of my husband, dlk has now become a truly happy place for me and i have you and all of the beautiful designers that we work with to thank!</p>
     <button class="blackbutton" type="button">Learn more</button>
-</section>
-<section class="container">
+    </div>
+    </section>
+    <section class="container logos">
     <a href="#"><img src="./img/mail.jpg" alt="mail" width="193" height="60"></a>
     <a href="#"><img src="./img/apple.jpg" alt="apple" width="179" height="61"></a>
     <a href="#"><img src="./img/eltex.jpg" alt="eltex" width="216" height="46"></a>
     <a href="#"><img src="./img/owox.jpg" alt="owox" width="211" height="40"></a>
-</section>
-<section class="container">
-    <img src="#" alt="">
-    <img src="#" alt="">
-    <img src="#" alt="">
-    <img src="#" alt=""></section>
-    <section class="container">
-        <h2>Design Life Kids</h2>
-<p class="guarantee">About Us</p>
-<p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
-<button class="blackbutton" type="button" >buy now</button>
-    <h2>Contacts</h2>
-    <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p> 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9490.1485980241!2d49.2903386!3d53.5124631!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb18d94ffcf91e387!2zREwgQWNhZGVteSDigJQg0LrRg9GA0YHRiyDQv9GA0L7Qs9GA0LDQvNC80LjRgNC-0LLQsNC90LjRjw!5e0!3m2!1sru!2sru!4v1669041543836!5m2!1sru!2sru" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
-</section>
+    </section>
 
+    <section class="container">
+        <div class="about">
+            <div class="design-life">
+        <h2 class="design-life__title">Design Life Kids</h2>
+    <p class="guarantee design-life__item design-life__about">About Us</p>
+    <p class="design-life__item design-life__text">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
+    <button class="blackbutton design-life__item" type="button" >buy now</button>
+    </div>
+    <div class="map">
+    <h2 class="map__title">Contacts</h2>
+    <p class="map__text">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p> 
+    <iframe class="map__adress" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9490.1485980241!2d49.2903386!3d53.5124631!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb18d94ffcf91e387!2zREwgQWNhZGVteSDigJQg0LrRg9GA0YHRiyDQv9GA0L7Qs9GA0LDQvNC80LjRgNC-0LLQsNC90LjRjw!5e0!3m2!1sru!2sru!4v1669041543836!5m2!1sru!2sru" width="483px" height="196px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
+    </div>
+</section>
+</div>
     </main>
-    <footer class="container">
+    <footer class="footer">
+        <div class="container">
         <div class="basement">
-        <section>
-            <p class="footer-item border" >Navigation</p>
+            <section>
+            <p class="footer-item footer__title" >Navigation</p>
             <ul>
             <li class="footer-item"><a class="footer-link" href="#">About Us</a></li>
             <li class="footer-item"><a class="footer-link" href="#">Blog</a></li>
@@ -96,7 +112,7 @@
         </ul>
         </section>
         <section>
-            <p class="footer-item border">Customer Information</p>
+            <p class="footer-item footer__title">Customer Information</p>
             <ul>
             <li class="footer-item"><a class="footer-link" href="#">Contact Us</a></li>
             <li class="footer-item"><a class="footer-link" href="#">Sale Exclusions</a></li>
@@ -107,10 +123,12 @@
         </ul>
         </section>
         <section >
-            <p class="footer-item border">Connect</p>
+            <p class="footer-item footer__title">Connect</p>
+            <form action="" class="footer__form">
             <input class="emailbutton" type="text">
-            <button class="blackbutton" type="button" >JOIN</button>
-            <br>
+            <button class="joinbutton" type="submit" >JOIN</button>
+            </form>
+        
             <a  href="#"><img class="scnetwork facebook" src="./img/icon/facebook.svg" alt="facebook"></a>
             <a href="#"><img class="scnetwork twitter" src="./img/icon/twitter.svg" alt="twitter"></a>
             <a href="#"><img class="scnetwork pinterest" src="./img/icon/pinterest.svg" alt="pinterest"></a>
@@ -130,8 +148,9 @@
             </p>
             <p class="copyright bottom-item">Copyright © 2018 Dlk • Design Life Kids</p>
             <p class="drline bottom-item">Web Design — Direct Line Development</p>
-        </section>
-    </div>
+                </section>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
